# OpenCV_study

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/week1_day2/: 4_PropertyImg.cpp  5_IntroMat.cpp
src/week1_day3/: 1_VideoCap.cpp  2_Drawing.cpp  3_MouseEvent.cpp  5_MaskCopy.cpp  CMakeLists.txt
src/week1_day4/: 123_graph.py  1_Brightness.cpp  2_BrightMean.cpp  2_BrightSelf.cpp  3_Contrast.cpp  4_HistogramSelf.cpp  4_HistorgramFunc.cpp  5_HistogramStretchEqualize.cpp  5_graph.py  6_ArithmeticLogical.cpp  CMakeLists.txt
src/week1_day5/: 1_Embossing.cpp  2_Blurring.cpp  3_Sharpening.cpp  4_ProfileBilateral.cpp  CMakeLists.txt
weeks_days/: CMakeLists.txt
weeks_days/week1_day2/: 1_ReadShowImg.cpp  1_homework.cpp  4_PropertyImg.cpp  5_IntroMat.cpp  CMakeLists.txt
weeks_days/week1_day3/: 1_CamRecord.cpp  1_VideoCap.cpp  3_Trackbar.cpp
